# software_documentation_rag_project

./: .env  .gitignore  README.md  agent.py  check_imports.py  check_tavily.py  main.py  pyproject.toml  source_manager.py  sources_metadata.json
chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CodeBlock.jsx  Message.jsx  SnippetsSidebar.jsx  SourcesTab.jsx
frontend/src/hooks/: useStreaming.js
